gps change again

--- a/qb-phone/html/index.html
+++ b/qb-phone/html/index.html
@@ -452,7 +452,7 @@
                                     <div id="return-button" data-toggle="tooltip" title="Return">
                                         <i style="color: black;" class="fas fa-undo-alt"></i>
                                     </div>
-                                    <div id="track-vehicle" data-toggle="tooltip" title="Set GPS (Broken)">
+                                    <div id="track-vehicle" data-toggle="tooltip" title="Set GPS">
                                         <i style="color: black;" class="fas fa-map-marker-alt"></i>
                                     </div>
                                 </div>
