--- a/qb-phone/html/index.html
+++ b/qb-phone/html/index.html
@@ -776,9 +776,9 @@
                         <div class="ping-header">
                             <div class="channel">
                                 <input id="channel" type="number" min="1" name="channel" placeholder="Player ID">
-                                <div style="display: block;" id="ping-send" class="ping-sender-piinger"><i class="fas fa-map-pin"></i> Send Ping</div>
-                                <div style="display: none;" id="ping-accept" class="ping-sender-piinger"><i class="far fa-check-circle"></i> Accept Ping</div>
-                                <div style="display: none;" id="ping-reject" class="ping-sender-piinger"><i class="far fa-times-circle"></i> Reject Ping</div>
+                                <div style="display: block;" id="ping-send" class="ping-sender-piinger"><i class="fas fa-map-pin"></i> Ask for Ping</div>
+                                <div style="display: none;" id="ping-accept" class="ping-sender-piinger"><i class="far fa-check-circle"></i> Accept Ping Req.</div>
+                                <div style="display: none;" id="ping-reject" class="ping-sender-piinger"><i class="far fa-times-circle"></i> Reject Ping Req.</div>
                             </div>
                         </div>
 
